--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body {
-    margin: 0 auto;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: aliceblue;
+}
+
+canvas {
+    margin-top: 70px;
+}
+
+h1 {
+    font-size: 3em;
+}
+
+footer {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-top: 100px;
 }
