--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ canvas {
 
 h1 {
     font-size: 3em;
-    border-style: dashed solid;
+    border-style: dashed;
     padding-top: 10px;
     padding-bottom: 10px;
 }
